Add prediction-aqi-query API