@@ -1,5 +1,6 @@
 package com.iot.airsense.controller;
 
+import com.iot.airsense.config.advice.ApiResponse;
 import com.iot.airsense.service.NotificationService;
 import io.github.jav.exposerversdk.PushClientException;
 import lombok.RequiredArgsConstructor;
@@ -9,21 +10,21 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
 
 @RestController
-@RequestMapping("/api/v1")
+@RequestMapping("/api/v1/notification")
 @RequiredArgsConstructor
 public class NotificationController {
     private final NotificationService notificationService;
 
-    @PostMapping("/sendNotification")
-    public ResponseEntity<String> sendNotification(
+    @PostMapping("/send")
+    public ResponseEntity<?> sendNotification(
             @RequestParam String title,
             @RequestParam String body) {
 
-        List<String> supplierNames = Arrays.asList("ExponentPushToken[]" , "ExponentPushToken[]");
+//        List<String> supplierNames = Arrays.asList("ExponentPushToken[XJ-vcHH450tXqbVT6nmcLy]" , "ExponentPushToken[]");
+        List<String> supplierNames = List.of("ExponentPushToken[XJ-vcHH450tXqbVT6nmcLy]");
 
         supplierNames.forEach((e)->
                 {
@@ -35,7 +36,6 @@ public class NotificationController {
 
                 }
         );
-        return ResponseEntity.ok("Notification sent successfully");
-
+        return ResponseEntity.ok(new ApiResponse<>(200, "Notification sent successfully", null));
     }
 }
